<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_graph_cadastro">
    <!-- IDs de fragments devem ser iguais aos dos itens no menu_main_activity -->
    <navigation
        android:id="@+id/nav_graph_cadastro"
        app:startDestination="@id/item_menu_cadastro">
        <fragment
            android:id="@+id/item_menu_cadastro"
...
            android:label="fragment_cadastro_fornecedor"
            tools:layout="@layout/fragment_cadastro_fornecedor" />

    </navigation>

    <navigation
        android:id="@+id/nav_graph_estoque"
        app:startDestination="@id/item_menu_estoque">
        <fragment
            android:id="@+id/item_menu_estoque"
            android:name="br.com.thiago.armazemdigital.fragments.estoque.EstoqueFragment"
            android:label="fragment_estoque"
            tools:layout="@layout/fragment_estoque" />
    </navigation>

    <navigation
        android:id="@+id/nav_graph_movimentacao"
        app:startDestination="@id/item_menu_movimentacao">
        <fragment
            android:id="@+id/item_menu_movimentacao"
            android:name="br.com.thiago.armazemdigital.fragments.movimentacao.ListagemMovimentacaoFragment"
            android:label="fragment_movimentacao"
            tools:layout="@layout/fragment_listagem_movimentacao">
            <action
                android:id="@+id/action_item_menu_movimentacao_to_cadastro_movimentacao_fragment"
                app:destination="@id/nav_graph_cadastro_movimentacao"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
...
                tools:layout="@layout/fragment_cadastro_fornecedor" />
        </navigation>

    </navigation>

    <fragment
        android:id="@+id/item_menu_configuracao"
        android:name="br.com.thiago.armazemdigital.fragments.configuracao.ConfiguracaoFragment"
        android:label="fragment_configuracao"
        tools:layout="@layout/fragment_configuracao" />
</navigation>
