<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_info_system"
        android:title=""
        android:icon="@drawable/ic_toolbar_info"
        app:showAsAction="always"/>
</menu>