...
    <string name="app_name">Armazem Digital</string>
    <string name="action_settings">Settings</string>
    <string name="content_description_imagem_cadastro_produto">Imagem do Produto Cadastrado</string>
    <string name="db_file_name">armazem_digital_db</string>
    <string name="dialog_button_ok">OK</string>
    <string name="info_made_by">Desenvolvido por Thiago Carvalho Füllenbach</string>
    <string name="info_title">Informações do Sistema</string>
    <string name="info_version">Versão do App: %s</string>
    <string name="label_btn_cadastro_categoria">Cadastro de Categorias</string>
    <string name="label_btn_cadastro_fornecedor">Cadastro de Fornecedores</string>
    <string name="label_btn_cadastro_produto">Cadastro de Produtos</string>
    <string name="label_btn_novo_cadastro_produto">Cadastrar Produto</string>
    <string name="label_btn_novo_cadastro_categoria">Cadastrar Categoria</string>
...
